fixed mobile nav alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -281,11 +281,14 @@ background: linear-gradient( rgba(214, 211, 211, 0.95), rgba(20, 20, 20, .0)),ur
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px) {
   .navbar-default .navButton{
-    margin-left: 44%;
+    margin-left: 40%;
   }
   .navbar-default {
     position: relative;
     z-index: 10;
+  }
+  .results {
+    background-color: white;
   }
   .resultsBlock {
     width: 95%;
